# XGBClassifier

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/processed/: dados_para_backtesting.csv  falsospositivos.csv  top_features.txt  verdadeirospostivos.csv
data/raw/: dados_brutos.csv  teste.csv  validacao.csv
models/: modelo_xgb.pkl
scripts/: atualizar_realizados.py  backtesting.py  predict_producao.py  retreino_automatico.py  teste.ipynb  treinar_modelo_v1.py  treinar_modelo_v2.py
