[project]
name = "finance-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.4"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "optuna>=4.4.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
    "ta>=0.11.0",
    "xgboost>=3.0.2",
    "yfinance>=0.2.64",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
